// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChainSwitcher > render's the component properly 1`] = `
<body>
  <onboard-v2
    style="all: initial;"
  />
  <style>
    
    
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 300 600;
  font-display: swap;
  src: url("https://rsms.me/inter/font-files/Inter-roman.var.woff2?v=3.19") format("woff2");
}

  
  </style>
  <div>
    <details
      class="dropdown"
      id="chain-dropdown"
    >
      <summary
        class="btn btn-theme btn-sm items-center flex justify-center disabled:cursor-not-allowed bg-white text-primary border-none hover:bg-base-200 h-[50px] border border-sky-500 shadow-sm"
        tabindex="0"
      >
        <div
          class="flex h-8 w-fit items-center"
        >
          <div
            class="h-8 w-8"
          >
            <img
              alt="current chain"
              src="/images/arbitrum.webp"
            />
          </div>
           
          <div
            class="ml-2"
          >
            <svg
              aria-label=""
              class="fa-icon icon-primary s-T5YyQewRBd7n"
              data-testid="icon"
              height="16"
              role="presentation"
              style="width:12px; height:12px; cursor:pointer;  "
              version="1.1"
              viewBox="0 0 1792 1792"
              width="16"
            >
              <path
                d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
              />
               
               
              
            </svg>
            <!--&lt;Svg&gt;-->
            <!--&lt;Icon&gt;-->
            <!--&lt;Icon&gt;-->
          </div>
        </div>
      </summary>
       
      <ul
        class="menu dropdown-content rounded-box z-[1] mt-4 w-52 bg-base-100 p-2 shadow"
        tabindex="0"
      >
        <li
          class="flex rounded-lg bg-primary text-white"
        >
          <button>
            <div
              class="h-6 w-6 rounded-full ring-1 ring-white"
            >
              <img
                alt="Chain Logo"
                src="/images/arbitrum.webp"
              />
            </div>
             
            Arbitrum Sepolia
          </button>
           
        </li>
      </ul>
    </details>
    <!--&lt;ChainSwitcher&gt;-->
  </div>
</body>
`;

exports[`ChainSwitcher > render's the dark mode classes 1`] = `
<body>
  <onboard-v2
    style="all: initial;"
  />
  <style>
    
    
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 300 600;
  font-display: swap;
  src: url("https://rsms.me/inter/font-files/Inter-roman.var.woff2?v=3.19") format("woff2");
}

  
  </style>
  <div>
    <details
      class="dropdown"
      id="chain-dropdown"
    >
      <summary
        class="btn btn-theme btn-sm items-center flex justify-center disabled:cursor-not-allowed bg-base-200 text-primary border-none hover:bg-base-300 h-[50px] border border-sky-500 shadow-sm"
        tabindex="0"
      >
        <div
          class="flex h-8 w-fit items-center"
        >
          <div
            class="h-8 w-8"
          >
            <img
              alt="current chain"
              src="/src/example.png"
            />
          </div>
           
          <div
            class="ml-2"
          >
            <svg
              aria-label=""
              class="fa-icon icon-primary s-T5YyQewRBd7n"
              data-testid="icon"
              height="16"
              role="presentation"
              style="width:12px; height:12px; cursor:pointer;  "
              version="1.1"
              viewBox="0 0 1792 1792"
              width="16"
            >
              <path
                d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
              />
               
               
              
            </svg>
            <!--&lt;Svg&gt;-->
            <!--&lt;Icon&gt;-->
            <!--&lt;Icon&gt;-->
          </div>
        </div>
      </summary>
       
      <ul
        class="menu dropdown-content rounded-box z-[1] mt-4 w-52 bg-base-100 p-2 shadow"
        tabindex="0"
      >
        <li
          class="flex "
        >
          <button>
            <div
              class="h-6 w-6 rounded-full ring-1 ring-white"
            >
              <img
                alt="Chain Logo"
                src="/images/arbitrum.webp"
              />
            </div>
             
            Arbitrum Sepolia
          </button>
           
        </li>
      </ul>
    </details>
    <!--&lt;ChainSwitcher&gt;-->
  </div>
</body>
`;
